FINALLY fixed the horizontal scroll on mobile

--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-body {
-  padding: 0;
-  margin: 0;
-  font-weight: normal;
-  max-width: 100vw;
-  overflow-x: hidden !important;
-  box-sizing: border-box !important;
-  background-color: #111;
-}
-html {
+html { 
   font-family: Arial, Helvetica, sans-serif;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+body { 
+  overflow-x: clip !important;
+  max-width: 100vw;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  background-color: #111;
 }
 /* marck-script-latin-ext-400-normal */
 @font-face {
